--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 DATABASE_URL="mongodb+srv://akshdeep:aksh1234@cluster0.kbpt2.mongodb.net/house2"
-GITHUB_ID=Ov23liSrugJan5NWqpRO
-GITHUB_SECRET=c4e2f34b16c7939bab470500932d9cf0d357df20
+GITHUB_ID=
+GITHUB_SECRET=
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="drd9ao8sj"
